move the rest of admin over and make some iframed pages for logster and sidekiq

--- a/app/components/admin/breadcrumbs_component/breadcrumbs_component.html.erb
+++ b/app/components/admin/breadcrumbs_component/breadcrumbs_component.html.erb
@@ -1,5 +1,5 @@
 <nav class="bg-white border-b border-gray-200 flex shadow-sm" aria-label="Breadcrumb">
-  <ol class="max-w-screen-xl w-full mx-auto px-4 flex space-x-4">
+  <ol class=" w-full px-4 flex space-x-4">
     <li class="flex">
       <div class="flex items-center">
         <%= link_to admin_root_path, class: "text-gray-400 hover:text-gray-500" do %>
