--- a/app/views/profiles/_form_password_change.html.haml
+++ b/app/views/profiles/_form_password_change.html.haml
@@ -1,5 +1,5 @@
 %section( aria-labelledby="password_change" )
-  = form_with url: password_profile_path, method: :post do |f|
+  = form_with url: password_profile_path, method: :post, data: { turbo: false } do |f|
     = render CardComponent.new do |c|
       = c.with :header do
         .ml-4.mt-4
