--- a/app/views/invites/index.html.haml
+++ b/app/views/invites/index.html.haml
@@ -12,7 +12,7 @@
 
 .mt-8.sm:mx-auto.sm:w-full.sm:max-w-md
   .bg-white.py-8.px-4.shadow.sm:rounded-lg.sm:px-10
-    = form_with url: invites_path, method: :post, class: "space-y-6" do
+    = form_with url: invites_path, method: :post, data: { turbo: false }, class: "space-y-6" do
       %div
         = label_tag "code", "Invite Code", class: "block text-sm font-medium text-gray-700"
         .mt-1
