--- a/app/views/layouts/admin/_body.html.erb
+++ b/app/views/layouts/admin/_body.html.erb
@@ -60,8 +60,8 @@
                 </summary>
 
                 <div class="space-y-1 ml-5 border-l border-dotted border-limegreen-600 pl-2" id="sub-menu-1">
-                  <%= link_to "Sidekiq", sidekiq_web_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                  <%= link_to "Logster", logster_web_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
+                  <%= link_to "Sidekiq", admin_sidekiq_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
+                  <%= link_to "Logster", admin_logster_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
                 </div>
               </details>
 
