--- a/app/views/oauth/applications/_form.html.haml
+++ b/app/views/oauth/applications/_form.html.haml
@@ -1,5 +1,5 @@
 %section( aria-labelledby="user_contact_settings" )
-  = form_with model: application, url: doorkeeper_submit_path(application), method: :post do |f|
+  = form_with model: application, url: doorkeeper_submit_path(application), method: :post, data: { turbo: false } do |f|
     = render CardComponent.new do |c|
       = c.with :header do
         .ml-4.mt-4
