--- a/app/views/oauth/authorizations/new.html.haml
+++ b/app/views/oauth/authorizations/new.html.haml
@@ -20,7 +20,7 @@
       -#- @pre_auth.scopes.each do |scope|
         -#%li= scope
 
-  = form_with url: oauth_authorization_path, method: :post do
+  = form_with url: oauth_authorization_path, method: :post, data: { turbo: false } do
     = hidden_field_tag :client_id, @pre_auth.client.uid
     = hidden_field_tag :redirect_uri, @pre_auth.redirect_uri
     = hidden_field_tag :state, @pre_auth.state
