--- a/app/views/layouts/admin/_body.html.erb
+++ b/app/views/layouts/admin/_body.html.erb
@@ -95,7 +95,7 @@
           <div class="flex flex-col space-y-1 from-limegreen-400 to-limegreen-600 bg-gradient-to-bl p-2 pt-5 sidebar-nav -secondary">
             <%= link_to root_path, class: "item", role: "menuitem" do %>
               <%= inline_svg_pack_tag "feather/cloud-lightning.svg" %>
-              Edit Admin
+              Exit Admin
             <% end %>
 
             <%= form_with url: "/logout", method: :delete, local: true do |f| %>
