adjust some landing page language

--- a/app/views/pages/main.html.haml
+++ b/app/views/pages/main.html.haml
@@ -72,7 +72,7 @@
             %dt.text-lg.leading-6.font-medium.text-gray-900
               Cheap
             %dd.mt-2.text-base.text-gray-500
-              transientBug is currently in a free, but invite-only registration beta. When it gets to a complete and stable feature-set that is ready for public use, that might change, but my goal is keep it in the range of $12.00 per year or less.
+              This one is easy: transientBug is currently in a free, but invite-only beta.
 
         %div
           .flex.items-center.justify-center.h-12.w-12.rounded-md.bg-limegreen-500.text-white
@@ -82,7 +82,7 @@
             %dt.text-lg.leading-6.font-medium.text-gray-900
               No Tracking, No Ads
             %dd.mt-2.text-base.text-gray-500
-              This might be shocking in todays world, but transientBug will not ever serve third-party trackers or serve ads. Ever.
+              This might be shocking in today's world, but transientBug will not serve third-party trackers or serve ads. Ever.
 
         %div
           .flex.items-center.justify-center.h-12.w-12.rounded-md.bg-limegreen-500.text-white
@@ -104,4 +104,4 @@
             %dt.text-lg.leading-6.font-medium.text-gray-900
               Simple but capable
             %dd.mt-2.text-base.text-gray-500
-              I really want a tool that provides painless bookmarking, but simple doesn't exclude advanced and ricer features.
+              I just want a tool that provides painless bookmarking, with an API capable of supporting a variety of tooling for enhancing the experience.
