upgrade to rails 7, switch to rollup and postcss rather than webpacker
also removed apitome and switched to raddocs for basic docs that doesn't break
other cleanups

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,8 +4,11 @@
     = render "layouts/common/head" do
       %title transientBug Admin #{ content_for :page_title }
 
-      = stylesheet_pack_tag "admin", media: "all", "data-turbo-track": "reload"
-      = javascript_pack_tag "admin", "data-turbo-track": "reload", "data-turbo-eval": false
+      = csrf_meta_tags
+      = csp_meta_tag
+
+      = stylesheet_link_tag "admin", "data-turbo-track": "reload"
+      = javascript_include_tag "admin", "data-turbo-track": "reload", defer: true
 
   %body{ class: [  controller_name, action_name, "relative bg-gray-50" ] }
     = render "layouts/admin/body"
