--- a/app/views/layouts/common/_footer.html.haml
+++ b/app/views/layouts/common/_footer.html.haml
@@ -38,7 +38,7 @@
                 = link_to "FAQ", faq_path, class: "text-base text-gray-300 hover:text-white"
 
               %li
-                = link_to "API Docs", apitome.root_path, data: { turbo: false }, class: "text-base text-gray-300 hover:text-white"
+                = link_to "API Docs", api_v1_raddocs_app_path, data: { turbo: false }, class: "text-base text-gray-300 hover:text-white"
 
               %li
                 = link_to "Terms of Service", tos_path, class: "text-base text-gray-300 hover:text-white"
