--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,8 +4,11 @@
     = render "layouts/common/head" do
       %title transientBug #{ content_for :page_title }
 
-      = stylesheet_pack_tag "application", media: "all", "data-turbo-track": "reload"
-      = javascript_pack_tag "application", "data-turbo-track": "reload", "data-turbo-eval": false
+      = csrf_meta_tags
+      = csp_meta_tag
+
+      = stylesheet_link_tag "application", "data-turbo-track": "reload"
+      = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
   %body.bg-gray-200.flex.flex-col.min-h-screen{ class: [  controller_name, action_name ] }
     = render "layouts/common/navbar"
