--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,7 +8,7 @@
       = csp_meta_tag
 
       = stylesheet_link_tag "admin", "data-turbo-track": "reload"
-      = javascript_include_tag "admin", "data-turbo-track": "reload", defer: true
+      = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
   %body{ class: [  controller_name, action_name, "relative bg-gray-50" ] }
     = render "layouts/admin/body"
