--- a/app/views/oauth/applications/index.html.haml
+++ b/app/views/oauth/applications/index.html.haml
@@ -4,7 +4,7 @@
 = render "profiles/tabs" do
   %section( aria-labelledby="oauth_table" )
     = render CardComponent.new do |c|
-      = c.with :header do
+      = c.header do
         .ml-4.mt-4
           %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Developer OAuth2 Apps
           .mt-1.text-sm.text-gray-500
@@ -14,7 +14,7 @@
           =link_to new_oauth_application_path, class: "btn -primary" do
             Create new app
 
-      = c.with :body do
+      = c.body do
         %table.min-w-full.divide-y.divide-gray-200
           %thead.bg-gray-50
             %tr
@@ -38,7 +38,7 @@
                 %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
                   No applications made yet
 
-      = c.with :footer do
+      = c.footer do
         - pagination = paginate @applications, theme: "card_footer"
         - if pagination.present?
           = pagination
