--- a/app/views/layouts/admin/_body.html.erb
+++ b/app/views/layouts/admin/_body.html.erb
@@ -11,15 +11,14 @@
 
           <nav class="mt-5 flex-1 sidebar-nav" aria-label="Sidebar">
             <div class="px-2 space-y-1 overflow-scroll">
-              <!-- Current: "bg-gray-200 text-gray-900", Default: "" -->
               <%= active_link_to admin_root_url, active: :exclusive, class: "item" do %>
-                <%= inline_svg_pack_tag "feather/home.svg" %>
+                <%= feather_svg "home" %>
                 Dashboard
               <% end %>
 
               <details class="tree" open>
                 <summary class="item">
-                  <%= inline_svg_pack_tag "feather/settings.svg", class: "text-gray-500 mr-3 h-6 w-6" %>
+                  <%= feather_svg "settings", class: "text-gray-500 mr-3 h-6 w-6" %>
                   General Admin
                 </summary>
 
@@ -29,42 +28,41 @@
                 </div>
               </details>
 
-              <details class="space-y-1">
-                <summary class="cursor-pointer select-none group flex items-center px-2 py-2 text-sm font-medium rounded-md text-gray-600 hover:bg-gray-50 hover:text-gray-900">
-                  <%= inline_svg_pack_tag "feather/users.svg", class: "text-gray-500 mr-3 h-6 w-6" %>
-                  Users
-                </summary>
-
-                <div class="space-y-1 ml-5 border-l border-dotted border-limegreen-600 pl-2" id="sub-menu-1">
-                  <%= link_to "Users", admin_users_path, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                  <%= link_to "Roles", admin_roles_path, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                  <%= link_to "Invitations", admin_invitations_path, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                </div>
-              </details>
-
-              <details class="space-y-1" open>
-                <summary class="cursor-pointer select-none group flex items-center px-2 py-2 text-sm font-medium rounded-md text-gray-600 hover:bg-gray-50 hover:text-gray-900">
-                  <%= inline_svg_pack_tag "feather/bookmark.svg", class: "text-gray-500 mr-3 h-6 w-6" %>
-                  Bookmarks
-                </summary>
-
-                <div class="space-y-1 ml-5 border-l border-dotted border-limegreen-600 pl-2" id="sub-menu-1">
-                  <%= link_to "Bookmarks", admin_bookmarks_path, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                </div>
-              </details>
-
-              <details class="space-y-1" open>
-                <summary class="cursor-pointer select-none group flex items-center px-2 py-2 text-sm font-medium rounded-md text-gray-600 hover:bg-gray-50 hover:text-gray-900">
-                  <%= inline_svg_pack_tag "feather/tool.svg", class: "text-gray-500 mr-3 h-6 w-6" %>
+              <details class="tree" open>
+                <summary class="item">
+                  <%= feather_svg "tool", class: "text-gray-500 mr-3 h-6 w-6" %>
                   System
                 </summary>
 
-                <div class="space-y-1 ml-5 border-l border-dotted border-limegreen-600 pl-2" id="sub-menu-1">
-                  <%= link_to "Sidekiq", admin_sidekiq_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
-                  <%= link_to "Logster", admin_logster_path, data: { turbo: false }, class: "group w-full flex items-center px-2 py-2 text-sm font-medium text-gray-600 rounded-md hover:text-gray-900 hover:bg-gray-50" %>
+                <div class="tree-leafs" id="sub-menu-4">
+                  <%= active_link_to "Sidekiq", admin_sidekiq_path, class: "item" %>
+                  <%= active_link_to "Logster", admin_logster_path, class: "item" %>
                 </div>
               </details>
 
+              <details class="tree" open>
+                <summary class="item">
+                  <%= feather_svg "bookmark", class: "text-gray-500 mr-3 h-6 w-6" %>
+                  Bookmarks
+                </summary>
+
+                <div class="tree-leafs" id="sub-menu-3">
+                  <%= active_link_to "Bookmarks", admin_bookmarks_path, class: "item" %>
+                </div>
+              </details>
+
+              <details class="tree" open>
+                <summary class="item">
+                  <%= feather_svg "users", class: "text-gray-500 mr-3 h-6 w-6" %>
+                  Users
+                </summary>
+
+                <div class="tree-leafs" id="sub-menu-2">
+                  <%= active_link_to "Users", admin_users_path, class: "item" %>
+                  <%= active_link_to "Roles", admin_roles_path, class: "item" %>
+                  <%= active_link_to "Invitations", admin_invitations_path, class: "item" %>
+                </div>
+              </details>
             </div>
           </nav>
         </div>
@@ -79,7 +77,7 @@
           <a href="#" class="flex-shrink-0 w-full group block p-2">
             <div class="flex items-center">
               <div>
-                <%= inline_svg_pack_tag "feather/user.svg", class: "inline-block h-9 w-9 rounded-full" %>
+                <%= feather_svg "user", class: "inline-block h-9 w-9 rounded-full" %>
               </div>
               <div class="ml-3">
                 <p class="text-sm font-medium text-gray-700 group-hover:text-gray-900">
@@ -89,18 +87,19 @@
                   <%= current_user.email %>
                 </p>
               </div>
+
             </div>
           </a>
 
           <div class="flex flex-col space-y-1 from-limegreen-400 to-limegreen-600 bg-gradient-to-bl p-2 pt-5 sidebar-nav -secondary">
             <%= link_to root_path, class: "item", role: "menuitem" do %>
-              <%= inline_svg_pack_tag "feather/cloud-lightning.svg" %>
+              <%= feather_svg "cloud-lightning" %>
               Exit Admin
             <% end %>
 
             <%= form_with url: "/logout", method: :delete, local: true do |f| %>
               <%= f.button type: :submit, class: "item", role: "menuitem" do %>
-                <%= inline_svg_pack_tag "feather/log-out.svg" %>
+                <%= feather_svg "log-out" %>
                 Log out
               <% end %>
             <% end %>
@@ -110,7 +109,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
+  <div class="flex flex-col min-w-0 flex-1 overflow-hidden relative">
     <%= content_for :page_header if content_for? :page_header %>
     <div class="h-full w-full p-4 overflow-scroll">
       <%= yield %>
