--- a/app/views/profiles/_form_api_token.html.haml
+++ b/app/views/profiles/_form_api_token.html.haml
@@ -1,13 +1,13 @@
 %section( aria-labelledby="api_token" )
   = render CardComponent.new do |c|
-    = c.with :header do
+    = c.header do
       .ml-4.mt-4
         %h2#api_token.text-lg.leading-6.font-medium.text-gray-900 API Token
         %p.mt-1.text-sm.text-gray-500 How you can access the api with personal tools.
 
-    = c.with :body do
+    = c.body do
       %p
-        API Documentation can be found #{ link_to "here.", apitome.root_path }
+        API Documentation can be found #{ link_to "here.", api_v1_raddocs_app_path }
 
       %p.mt-2
         If you are building an app or extension that interacts with the transientBug API, you should make a
@@ -23,7 +23,7 @@
         .px-4.py-2.bg-gray-200.shadow-inner.rounded-md.w-full.select-all.cursor-text.truncate
           = @user.api_token
 
-    = c.with :footer do
+    = c.footer do
       = link_to profile_regenerate_index_path(@service_announcement), class: "btn -secondary", method: :post do
         = feather_svg "refresh-cw", class: "h-5 w-5 mr-2"
         Regenerate
