--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,4 +11,5 @@
       = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
   %body{ class: [  controller_name, action_name, "relative bg-gray-50" ] }
+    = render ServiceAnnouncementBannerComponent.with_collection(service_announcements)
     = render "layouts/admin/body"
