--- a/app/views/layouts/page.html.haml
+++ b/app/views/layouts/page.html.haml
@@ -11,6 +11,8 @@
       = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
   %body.bg-gray-200.flex.flex-col.min-h-screen{ class: [  controller_name, action_name ] }
+    = render ServiceAnnouncementBannerComponent.with_collection(service_announcements)
+
     %div
       .bg-gray-800.pb-32
         = render "layouts/common/navbar"
