fixes for previous commit

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,11 +4,5 @@
     = render "layouts/common/head" do
       %title transientBug Admin #{ content_for :page_title }
 
-      = csrf_meta_tags
-      = csp_meta_tag
-
-      = stylesheet_link_tag "admin", "data-turbo-track": "reload"
-      = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
-
-  %body{ class: [  controller_name, action_name, "relative bg-gray-50" ] }
+  %body.relative.bg-gray-50.admin{ class: [ controller_name, action_name ] }
     = render "layouts/admin/body"
