--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,16 +4,10 @@
     = render "layouts/common/head" do
       %title transientBug #{ content_for :page_title }
 
-      = csrf_meta_tags
-      = csp_meta_tag
-
-      = stylesheet_link_tag "application", "data-turbo-track": "reload"
-      = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
-
-  %body.bg-gray-200.flex.flex-col.min-h-screen{ class: [  controller_name, action_name ] }
+  %body.bg-gray-200.flex.flex-col.min-h-screen.application{ class: [  controller_name, action_name ] }
     = render "layouts/common/navbar"
 
-    %main.relative.max-w-7xl.mx-auto.px-2.sm:px-4.lg:divide-y.lg:divide-gray-700.lg:px-8.flex-grow.w-full.overflow-y-auto.focus:outline-none{:tabindex => "0"}
+    %main.relative.max-w-7xl.mx-auto.px-2.sm:px-4.lg:divide-y.lg:divide-gray-700.lg:px-8.flex-grow.w-full.overflow-y-auto.focus:outline-none( tabindex="0" )
       .py-6.space-y-4.-mx-2.sm:mx-0
         .md:flex.md:items-center.md:justify-between.px-4.sm:px-0
           .flex-1.min-w-0
