--- a/app/assets/stylesheets/application.postcss.css
+++ b/app/assets/stylesheets/application.postcss.css
@@ -18,6 +18,10 @@
     @apply bg-limegreen-500;
   }
 
+  turbo-frame {
+    display: block;
+  }
+
   .default-input {
     @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 focus:placeholder-gray-400;
   }
