--- a/app/views/layouts/common/_navbar.html.haml
+++ b/app/views/layouts/common/_navbar.html.haml
@@ -8,14 +8,15 @@
 
       / Search bar
       - if signed_in?
-        .relative.z-0.flex-1.px-2.flex.items-center.justify-center.sm:absolute.sm:inset-0
+        = form_with method: :get, url: bookmarks_search_index_path, class: "relative z-0 flex-1 px-2 flex items-center justify-center sm:absolute sm:inset-0" do |f|
           .w-full.sm:max-w-xs
+            = f.label :q, "Search", class: "sr-only"
             %label.sr-only(for="search") Search
             .relative
               .pointer-events-none.absolute.inset-y-0.left-0.pl-3.flex.items-center
                 = feather_svg "search", class: "h-5 w-5 text-gray-400"
 
-              %input#search.block.w-full.bg-gray-700.border.border-transparent.rounded-md.py-2.pl-10.pr-3.text-sm.placeholder-gray-400.focus:outline-none.focus:bg-white.focus:border-white.focus:ring-white.focus:text-gray-900.focus:placeholder-gray-500.sm:text-sm( name="search" placeholder="Search" type="search" )
+              = f.search_field :q, class: "block w-full bg-gray-700 border border-transparent rounded-md py-2 pl-10 pr-3 text-sm placeholder-gray-400 focus:outline-none focus:bg-white focus:border-white focus:ring-white focus:text-gray-900 focus:placeholder-gray-500 sm:text-sm", placeholder: "Search"
 
       .relative.z-10.flex.items-center.lg:hidden
         / Mobile menu button
@@ -82,7 +83,7 @@
             .text-base.font-medium.text-white Signed in as
             .text-sm.font-medium.text-gray-400= current_user.username
 
-          %button.ml-auto.flex-shrink-0.bg-gray-800.rounded-full.p-1.text-gray-400.hover:text-white.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
+          -#%button.ml-auto.flex-shrink-0.bg-gray-800.rounded-full.p-1.text-gray-400.hover:text-white.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white
             %span.sr-only View notifications
             = feather_svg "bell", class: "h-6 w-6"
 
