--- a/app/assets/stylesheets/application.postcss.css
+++ b/app/assets/stylesheets/application.postcss.css
@@ -43,7 +43,7 @@
     /*@apply bg-gray-500 hover:bg-limegreen-500 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500;*/
   }
 
-  .admin {
+  .tb-admin {
     .filter-form {
       @apply my-4 space-y-2;
 
