--- a/app/views/admin/home/logster.html.erb
+++ b/app/views/admin/home/logster.html.erb
@@ -12,4 +12,6 @@
   <% end %>
 <% end %>
 
-<iframe src="<%= logster_web_path %>" class="h-full w-full" />
+<% content_for :frame do %>
+  <iframe src="<%= logster_web_path %>" class="h-full w-full" />
+<% end %>
