--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body class="relative flex flex-col min-h-screen tb-page tb-<%= controller_name %> tb-<%= action_name %>">
-    <%= render ServiceAnnouncementBannerComponent.with_collection(service_announcements) %>
+    <%= render "layouts/common/body_preface" %>
 
     <div>
       <div class="bg-gray-800 pb-32">
