--- a/app/components/flash_component/flash_component.html.erb
+++ b/app/components/flash_component/flash_component.html.erb
@@ -1,33 +1,19 @@
-<!-- Global notification live region, render this permanently at the end of the document -->
-<div aria-live="assertive" class="fixed inset-0 flex items-center px-4 py-6 pointer-events-none sm:p-6 sm:items-start">
-  <div class="w-full flex flex-col items-center space-y-4 sm:items-end">
-    <!--
-      Notification panel, dynamically insert this into the live region when it needs to be displayed
+<div
+    class="max-w-sm w-full <%= color_class %> shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden"
+    data-controller="remover do-after" data-remover-target="removable" data-do-after-seconds-value="15" data-action="do-after:trigger->remover#remove">
+  <div class="p-4">
+    <div class="flex items-center">
+      <div class="w-0 flex-1 flex justify-between">
+        <p class="w-0 flex-1 text-sm font-medium text-gray-900">
+          <%= message %>
+        </p>
+      </div>
 
-      Entering: "transform ease-out duration-300 transition"
-        From: "translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2"
-        To: "translate-y-0 opacity-100 sm:translate-x-0"
-      Leaving: "transition ease-in duration-100"
-        From: "opacity-100"
-        To: "opacity-0"
-    -->
-    <div class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden">
-      <div class="p-4">
-        <div class="flex items-center">
-          <div class="w-0 flex-1 flex justify-between">
-            <p class="w-0 flex-1 text-sm font-medium text-gray-900"><%= flash.notice %></p>
-            <!--
-              <button type="button" class="ml-3 flex-shrink-0 bg-white rounded-md text-sm font-medium text-limegreen-600 hover:text-limegreen-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500">Undo</button>
-            -->
-          </div>
-
-          <div class="ml-4 flex-shrink-0 flex">
-            <button class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500">
-              <span class="sr-only">Close</span>
-              <%= helpers.feather_svg "x", class: "h-5 w-5" %>
-            </button>
-          </div>
-        </div>
+      <div class="ml-4 flex-shrink-0 flex">
+        <button class="bg-transparent rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500" data-action="remover#remove">
+          <span class="sr-only">Close</span>
+          <%= helpers.feather_svg "x", class: "h-5 w-5" %>
+        </button>
       </div>
     </div>
   </div>
