--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body class="relative bg-gray-50 tb-admin tb-<%= controller_name %> tb-<%= action_name %>">
-    <%= render ServiceAnnouncementBannerComponent.with_collection(service_announcements) %>
+    <%= render "layouts/common/body_preface" %>
 
     <%= render "layouts/admin/body" %>
   </body>
