--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -3,7 +3,8 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= link_to "Add Bookmark", new_bookmark_path, class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-limegreen-600 hover:bg-limegreen-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500" %>
+  <%= link_to "Add Bookmark", new_bookmark_path, class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-limegreen-600 hover:bg-limegreen-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500", data: { turbo_frame: :new_modal } %>
+
 <% end %>
 
 <% if @bookmarks.any? %>
@@ -19,3 +20,5 @@
 
   <p>Maybe <%= link_to "make one?", new_bookmark_path %></p>
 <% end %>
+
+<%= turbo_frame_tag :new_modal %>
