--- a/app/views/admin/bookmarks/show.html.erb
+++ b/app/views/admin/bookmarks/show.html.erb
@@ -19,38 +19,52 @@
 <% end %>
 
 <% if @bookmark.offline_caches.any? %>
-  <div class="flow-root">
-    <ul class="-mb-8">
-      <% @bookmark.offline_caches.reverse.each do |offline_cache| %>
-        <li>
-          <div class="relative pb-8">
-            <span class="absolute top-4 left-4 -ml-px h-full w-0.5 bg-gray-200" aria-hidden="true"></span>
-            <div class="relative flex space-x-3">
-              <div>
-                <% if offline_cache.error_messages.none? %>
-                  <span class="h-8 w-8 rounded-full bg-green-400 flex items-center justify-center ring-8 ring-white">
-                    <%= inline_svg_pack_tag "feather/check.svg", class: "h-5 w-5 text-white stroke-current" %>
-                  </span>
-                <% else %>
-                  <span class="h-8 w-8 rounded-full bg-red-400 flex items-center justify-center ring-8 ring-white">
-                    <%= inline_svg_pack_tag "feather/alert-circle.svg", class: "h-5 w-5 text-white stroke-current" %>
-                  </span>
-                <% end %>
-              </div>
-              <div class="min-w-0 flex-1 pt-1.5 flex justify-between space-x-4">
-                <div>
-                  <p class="text-sm text-gray-500">Cached <%= offline_cache.assets.count %> <%= "Asset".pluralize offline_cache.assets.count %></p>
+  <% content_for :frame do %>
+    <main class="min-w-0 flex-1 lg:flex h-full">
+      <aside class="hidden lg:block lg:flex-shrink-0 lg:order-first">
+        <div class="h-full relative flex flex-col w-96 border-r border-gray-200 bg-white overflow-y-auto">
+          <ul role="list" class="relative z-0 divide-y divide-gray-200">
+            <% @bookmark.offline_caches.order(created_at: :desc).each do |offline_cache| %>
+              <li class="bg-white">
+                <div class="relative px-6 py-5 flex items-center space-x-3 hover:bg-gray-50 focus-within:ring-2 focus-within:ring-inset focus-within:ring-limegreen-500">
+                  <div class="flex-shrink-0">
+                    <% if offline_cache.error_messages.none? %>
+                      <span class="h-8 w-8 rounded-full bg-green-400 flex items-center justify-center ring-8 ring-white">
+                        <%= inline_svg_pack_tag "feather/check.svg", class: "h-5 w-5 text-white stroke-current" %>
+                      </span>
+                    <% else %>
+                      <span class="h-8 w-8 rounded-full bg-red-400 flex items-center justify-center ring-8 ring-white">
+                        <%= inline_svg_pack_tag "feather/alert-circle.svg", class: "h-5 w-5 text-white stroke-current" %>
+                      </span>
+                    <% end %>
+                  </div>
+
+                  <div class="flex-1 min-w-0">
+                    <%= active_link_to admin_bookmark_cache_path(@bookmark, offline_cache), class: "focus:outline-none", data: { turbo_frame: :cache_details, turbo_action: :advance } do %>
+                      <!-- Extend touch target to entire panel -->
+                      <span class="absolute inset-0" aria-hidden="true"></span>
+                      <date class="text-sm font-medium text-gray-900"><%= offline_cache.created_at.to_formatted_s(:long_ordinal) %></date>
+                      <p class="text-sm text-gray-500 truncate">
+                        <%= offline_cache.assets.length %> <%= "Assets".pluralize offline_cache.assets.length %>
+                        |
+                        <%= offline_cache.error_messages.length %> <%= "Error".pluralize offline_cache.error_messages.length %>
+                      </p>
+                    <% end %>
+                  </div>
                 </div>
-                <div class="text-right text-sm whitespace-nowrap text-gray-500">
-                  <date><%= offline_cache.created_at.to_s(:long) %></date>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </aside>
+
+      <section aria-labelledby="primary-heading" class="min-w-0 flex-1 h-full flex flex-col overflow-y-auto p-4">
+        <h1 id="primary-heading" class="sr-only">Cache Details</h1>
+
+        <%= turbo_frame_tag :cache_details %>
+      </section>
+    </main>
+  <% end %>
 <% else %>
   <%= render Admin::ZeroStateComponent.new do |c| %>
     <% c.title { "No caches yet" } %>
